--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write .",
-    "type-check": "tsc --noEmit"
+    "start": "next start"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.10",
@@ -25,7 +22,7 @@
     "@radix-ui/react-tooltip": "^1.2.6",
     "@stripe/stripe-js": "^7.3.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/ssr": "^0.1.0",
+    "@supabase/ssr": "latest",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-table": "^8.21.3",
     "autoprefixer": "10.4.20",
@@ -34,25 +31,23 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.10.1",
     "lucide-react": "^0.468.0",
-    "next": "14.1.0",
+    "next": "latest",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "resend": "^4.5.1",
     "sonner": "^2.0.3",
     "stripe": "^18.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/node": "22.10.2",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "19.0.2",
     "postcss": "8.4.49",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0"
+    "typescript": "5.7.2"
   }
 }
