--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next/third-parties": "^15.3.2",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -33,7 +34,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.10.1",
     "lucide-react": "^0.468.0",
-    "next": "latest",
+    "next": "^15.3.2",
     "next-themes": "^0.4.3",
     "plaiceholder": "^3.0.0",
     "prettier": "^3.3.3",
