--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "framer-motion": "^12.10.1",
     "lucide-react": "^0.468.0",
     "next": "^15.3.2",
+    "next-intl": "^4.1.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.3",
     "plaiceholder": "^3.0.0",
