--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@marsidev/react-turnstile": "^1.1.0",
     "@next/third-parties": "^15.3.2",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-avatar": "^1.1.9",
@@ -39,13 +40,15 @@
     "next-intl": "^4.1.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.3",
+    "next-turnstile": "^1.0.4",
     "plaiceholder": "^3.0.0",
     "prettier": "^3.3.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "resend": "^4.5.1",
     "sonner": "^2.0.3",
-    "stripe": "^18.1.0"
+    "stripe": "^18.1.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "22.10.2",
