--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "next-turnstile": "^1.0.4",
     "plaiceholder": "^3.0.0",
     "prettier": "^3.3.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "resend": "^4.5.1",
     "sonner": "^2.0.3",
     "stripe": "^18.1.0",
@@ -54,8 +54,8 @@
   },
   "devDependencies": {
     "@types/node": "22.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "19.0.2",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
     "globals": "^16.1.0",
     "postcss": "8.4.49",
     "tailwind-merge": "^2.5.2",
