--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@radix-ui/react-switch": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.6",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.89.0",
     "@stripe/stripe-js": "^7.3.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-table": "^8.21.3",
     "@tawk.to/tawk-messenger-react": "^2.0.2",
     "@vercel/analytics": "^1.5.0",
@@ -40,16 +43,19 @@
     "lucide-react": "^0.468.0",
     "next": "^15.3.2",
     "next-intl": "^4.1.0",
+    "next-sanity": "^9.11.1",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.3",
     "next-turnstile": "^1.0.4",
     "plaiceholder": "^3.0.0",
     "prettier": "^3.3.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "resend": "^4.5.1",
+    "sanity": "^3.89.0",
     "sonner": "^2.0.3",
     "stripe": "^18.1.0",
+    "styled-components": "^6.1.18",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
