--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@marsidev/react-turnstile": "^1.1.0",
     "@next/third-parties": "^15.3.2",
     "@radix-ui/react-accordion": "^1.2.10",
@@ -14,15 +15,16 @@
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.6",
     "@radix-ui/react-radio-group": "^1.3.6",
-    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slider": "^1.3.4",
-    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.11",
+    "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.89.0",
@@ -51,12 +53,14 @@
     "prettier": "^3.3.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.56.4",
     "resend": "^4.5.1",
     "sanity": "^3.89.0",
     "sonner": "^2.0.3",
     "stripe": "^18.1.0",
     "styled-components": "^6.1.18",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.25.23"
   },
   "devDependencies": {
     "@types/node": "22.10.2",
