sitemap generation don

--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.6",
+    "@sanity/client": "^7.3.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.89.0",
     "@stripe/stripe-js": "^7.3.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.49.4",
+    "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-table": "^8.21.3",
     "@tawk.to/tawk-messenger-react": "^2.0.2",
