--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.0.1",
     "@marsidev/react-turnstile": "^1.1.0",
     "@next/third-parties": "^15.3.2",
@@ -16,6 +17,7 @@
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.6",
     "@radix-ui/react-radio-group": "^1.3.6",
     "@radix-ui/react-select": "^2.2.5",
@@ -27,6 +29,7 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@sanity/client": "^7.3.0",
+    "@sanity/document-internationalization": "^3.3.1",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.89.0",
     "@stripe/stripe-js": "^7.3.0",
@@ -56,7 +59,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.56.4",
     "resend": "^4.5.1",
-    "sanity": "^3.89.0",
+    "sanity": "^3.91.0",
     "sonner": "^2.0.3",
     "stripe": "^18.1.0",
     "styled-components": "^6.1.18",
